# idachser.blog

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci.yml  deploy.yml
blog/: admin.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_description_mediafile.py  0003_post_language.py  0004_tag_slug.py
nginx/: nginx.conf
pages/: admin.py  models.py  tests.py  urls.py  views.py
pages/migrations/: 0001_initial.py
rss/: feeds.py
scripts/: backup.sh
static/css/: gruvbox_dark.css  styles.css
static/js/: lightbox.js  toggle_theme.js
templates/: base.html  header.html  lightbox.html
templates/blog/: post_detail.html  posts.html  tags.html
templates/pages/: about.html  news.html
website/: context_processors.py  settings.py  test_urls.py  tests.py  urls.py
