[project]
name = "mywebsite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "gunicorn>=23.0.0",
    "markdown>=3.9",
    "pillow>=12.0.0",
    "psycopg[binary]>=3.2.10",
    "pygments>=2.19.2",
    "python-dotenv>=1.2.1",
    "python-markdown-math>=0.9",
]
